# simufaith

./: CMakeLists.txt  README.md  some_drafts.txt  sources.cmake
data/: credits.txt
data/gui/cursor/: license.txt
data/gui/skins/: license.txt
src/: config.h.in
src/core/: core.cpp  core.h  main.cpp
src/sim/: .person.cpp.swp  building.cpp  building.h  faith.cpp  faith.h  house.cpp  house.h  office.cpp  office.h  person.cpp  person.h  priest.cpp  priest.h  temple.cpp  temple.h  util.cpp  util.h  world.cpp  world.h
src/ui/: mainui.cpp  mainui.h
tests/: runtests.cpp  testcase.cpp  testcase.h  testperson.cpp  testperson.h
